@@ -9,6 +9,9 @@ import java.nio.file.Files;
 import java.nio.file.Path;
 import java.security.MessageDigest;
 import java.util.HexFormat;
+import java.util.LinkedHashMap;
+import java.util.List;
+import java.util.Map;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.io.TempDir;
 
@@ -16,6 +19,46 @@ class BootstrapLauncherTest {
 
     @TempDir
     Path tempDir;
+
+    @Test
+    void buildsWindowsRelaunchCommandUsingBundledJava() {
+        Path java = Path.of("D:/Program Files/JLShell/runtime/bin/javaw.exe");
+        Path launcher = Path.of("D:/Program Files/JLShell/app/jlshell-launcher.jar");
+
+        List<String> command = BootstrapLauncher.windowsRelaunchCommand(
+                java, launcher, new String[] { "--open", "host-a" });
+
+        assertEquals(java.toString(), command.get(0));
+        assertTrue(command.contains("-Djlshell.runtime.isolated=true"));
+        assertEquals("-jar", command.get(7));
+        assertEquals(launcher.toString(), command.get(8));
+        assertEquals(List.of("--open", "host-a"), command.subList(9, 11));
+    }
+
+    @Test
+    void sanitizesExternalJavaEnvironmentForWindowsChild() {
+        Map<String, String> environment = new LinkedHashMap<>();
+        environment.put("Path", "C:\\Program Files\\Java\\jdk1.8.0_131\\jre\\bin;C:\\tools");
+        environment.put("Java_Home", "C:\\Program Files\\Java\\jdk1.8.0_131");
+        environment.put("JAVA_TOOL_OPTIONS", "-Djava.library.path=C:\\old-java");
+        environment.put("_JAVA_OPTIONS", "-Xmx2g");
+        environment.put("JDK_JAVA_OPTIONS", "--add-modules=ALL-SYSTEM");
+        environment.put("SystemRoot", "C:\\Windows");
+        environment.put("APPDATA", "C:\\Users\\tester\\AppData\\Roaming");
+        Path runtime = Path.of("D:/Program Files/JLShell/runtime");
+
+        BootstrapLauncher.sanitizeWindowsEnvironment(environment, runtime);
+
+        assertEquals(runtime.toString(), environment.get("JAVA_HOME"));
+        assertEquals(runtime.resolve("bin") + ";C:\\Windows\\System32;C:\\Windows;C:\\tools",
+                environment.get("PATH"));
+        assertFalse(environment.containsKey("Path"));
+        assertFalse(environment.containsKey("Java_Home"));
+        assertFalse(environment.containsKey("JAVA_TOOL_OPTIONS"));
+        assertFalse(environment.containsKey("_JAVA_OPTIONS"));
+        assertFalse(environment.containsKey("JDK_JAVA_OPTIONS"));
+        assertEquals("C:\\Users\\tester\\AppData\\Roaming", environment.get("APPDATA"));
+    }
 
     @Test
     void copiesVerifiedPendingUpdateToBundledJarWhenInstallDirIsWritable() throws Exception {
